--- a/u9/pwa/manifest.json
+++ b/u9/pwa/manifest.json
@@ -4,18 +4,18 @@
   "theme_color": "#005d55",
   "background_color": "#2196f3",
   "display": "standalone",
-  "scope": "/pwa",
-  "start_url": "/pwa/a1.html",
+  "scope": "/WS21-Web-Engineering-Master/u9/pwa/",
+  "start_url": "/WS21-Web-Engineering-Master/u9/pwa/",
   "icons": [
     {
-      "src": "/img/icon-192.png",
+      "src": "img/icon-192.png",
       "type": "image/png",
-      "size": "192x192"
+      "sizes": "192x192"
     },
     {
-      "src": "/img/icon-512.png",
+      "src": "img/icon-512.png",
       "type": "image/png",
-      "size": "512x512"
+      "sizes": "512x512"
     }
   ]
 }
