--- a/u9/pwa/manifest.json
+++ b/u9/pwa/manifest.json
@@ -5,7 +5,7 @@
   "background_color": "#2196f3",
   "display": "standalone",
   "scope": "/WS21-Web-Engineering-Master/u9/pwa/",
-  "start_url": "/WS21-Web-Engineering-Master/u9/pwa/",
+  "start_url": ".",
   "icons": [
     {
       "src": "img/icon-192.png",
